# pc-rd-cmp

./: .gitignore  .gitmodules  .ocamlformat  .ocamlformat-ignore  LICENSE  Makefile  dune-project  dune-workspace  flake.nix  shell.nix  treefmt.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: test.yml
data/configs/: bench.json  memo+peek.json  memo.json  test.json  trace.json
data/json/complex/: 1  2  3  4  5  6
data/json/others/: repeat
data/json/ws/: lines  mix  spaces
data/res/: a1.res  apply3.res  arrow0.res  async_attrs.res  b0.res  bin.res  binops.res  block.res  comments.res  constants.res  end_pos.resi  es6template.res  field_apply.res  internal.res  modexpr_apply_attrs.res  multiline.resi  neg.res  open_path.resi  ops.res  p0.res  simple_include.res  simple_let_sig.res  simple_module_type.res  simple_open.res  string.res  type.res  type_vars.res  ua.res  variants.res
make/: base.mk  copy_files.mk
nix/: basic.nix  pkgs.nix  shell.nix
results/bench/: _.mk  angstrom  angstrom-mod  json
results/report/: 00_title.tex  01_intro.tex  10_task.tex  12_basic.tex  13_lib.tex  14_mod.tex  15_parser.tex  20_conclusion.tex  _.mk  bib.bib  main.tex
results/report/headers/: base.tex  cmds.tex  lst.tex
results/size/: .mk  code_size.sh
results/text/: 00_title.tex  01_intro.tex  10_task.tex  11_libs.tex  12_approach.tex  20_conclusion.tex  _.mk  bib.bib  main.tex
scripts/: auto_memo.sh  bench_cb.sh  bench_perf.sh  code_size.sh  run_bench.sh
scripts/opam/: setup.sh
src/: .mk  _.mk
src/angstrom-pos/: alternatives.ml  angstrom_pos.ml  charset.ml  dune  make.ml  parser.ml  peek.ml  sigs.ml  state.ml  trace.ml
src/angstrom-pos/bench/: dune  main.ml
src/angstrom-pos/test/: .mk  dune  main.ml
src/exec-info/: dune  exec_info.ml  exec_info.mli  types.ml
src/exec-info/utils/: dune  vizualize.ml
src/exec_info/: dune  exec_info.ml  exec_info_tests.ml
src/json/: .mk  _.mk  dune  p_base.ml  p_bench.ml  p_test.ml  tokens.ml
src/json/bench/: .mk  _.mk  dune  main.ml
src/json/libs/: dune  json_opal.ml  lexer.mll  p_angstrom.ml  p_angstrom_pos.ml  p_bark.ml  p_mparser.ml  p_opal.ml  p_opal_lex.ml  p_yojson.ml
src/parser/: .mk  _.mk  basic.ml  diagnostics.ml  dune  lexer.mll  parser.ml  parser_basic.ml  parser_constant.ml  parser_expression.ml  parser_modexpr.ml  parser_modtype.ml  parser_pattern.ml  parser_type.ml  parser_utils.ml  parsetree_mapping.ml  pc_syntax.ml  sigs.ml  state.ml  token.ml  trace.ml  trace_ctx.ml
src/parser/.base/: .mk
src/parser/bench/: .mk  _.mk  avg.sh  dune  exec.ml  exec.sh  exec_core_bench.sh  exec_memo.ml  exec_memo_peek.ml  exec_mpt.ml  exec_none.ml  exec_none2.ml  exec_pc.ml  exec_perf.sh  exec_res.ml  main.ml  metrics.sh
src/parser/parser_angstrom/: dune  parser_angstrom.ml
src/parser/parser_tokenized/: dune  lexer.mll  parser_tokenized.ml  token.ml
src/parser/test/: .mk  _.mk  dune  exec.sh  fast.ml  main.ml  print_actual.ml  print_expected.ml  test.ml
src/parser/test_memo/: .mk  dune  exec.sh  main.ml
src/parser/utils/: .mk  auto_memo.ml  dune  exec.ml  res_parse_string.ml  res_parse_string.mli  run_common.ml
src/pc/: dune  pc.ml  sigs.ml
src/ppx_jane_fix/: dune
src/rescript_ast_fix/: dune  rescript_ast_fix.ml
src/set_kind/: dune
src/test/: dune  main.ml
src/tokenized/: alternatives.ml  dune  make.ml  parser.ml  sigs.ml  tokenized.ml  tset.ml
switch/: _.mk
test/: .mk
test/image/: .mk  Dockerfile  default.nix  name.nix  run.sh  tag
