(library
 (name exec_info)
 (modules exec_info)
 (libraries base rescript-syntax.compilerlibs406)
 (preprocess
  (pps ppx_sexp_conv ppx_deriving.ord)))

(library
 (name exec_info_tests)
 (modules exec_info_tests)
 (libraries exec_info)
 (preprocess
  (pps ppx_inline_test ppx_assert))
 (inline_tests))
