(library
 (name res_parse_string)
 (modules res_parse_string)
 (libraries syntax))

(library
 (name run_common)
 (modules run_common)
 (libraries
  core_kernel
  res_parse_string
  pc_syntax
  parser_angstrom
  parser_tokenized
  cmdliner))

(executable
 (name exec)
 (modules exec)
 (libraries run_common)
 (modes byte exe))

(executable
 (name auto_memo)
 (modules auto_memo)
 (libraries run_common))
