(library
 (name res_parse_string)
 (modules res_parse_string)
 (libraries rescript-syntax.syntax))

(library
 (name run_common)
 (modules run_common)
 (libraries
  core
  res_parse_string
  pc_syntax
  parser_angstrom
  parser_tokenized
  cmdliner)
 (preprocess
  (pps ppx_deriving.eq)))

(executable
 (name exec)
 (modules exec)
 (libraries run_common)
 (modes byte exe))

(executable
 (name auto_memo)
 (modules auto_memo)
 (libraries run_common))
